# LTRATO-2001

./: .env  .gitignore  Makefile  README.md  __init__.py  appendix.html  conclusions.html  genindex.html  index.html  objects.inv  pyats_testbed.yaml  pyproject.toml  search.html  searchindex.js  task2step1.py  task2step2.py  task2step2b.py  task3step1a.py  task3step1b.py  task3step2.py  task3step3.py  task3step4.py  task4step1.py  task4step1.robot  task4step2.robot  task8_labpyats.py  task9_labpyats.py
.github/: CODEOWNERS
.github/workflows/: documentation_main.yml  documentation_pull_requests.yml
_sources/: appendix.rst.txt  conclusions.rst.txt
_sources/introduction/: index.rst.txt
_sources/labaccess/: index.rst.txt
_sources/tasks/task1/: index.rst.txt  step1.rst.txt  step2.rst.txt  step3.rst.txt  step4.rst.txt  step5.rst.txt
_sources/tasks/task2/: index.rst.txt  step1.rst.txt  step2.rst.txt  step3.rst.txt  step5.rst.txt
_sources/tasks/task3/: index.rst.txt  step1.rst.txt  step3.rst.txt  step4.rst.txt
_sources/tasks/task4/: index.rst.txt  step1.rst.txt  step2.rst.txt
_sources/tasks/task5/: step1.rst.txt  step2.rst.txt  step3.rst.txt  step4.rst.txt
cml/: lab.yaml
docs/: Makefile  appendix.rst  conclusions.rst  conf.py  index.rst  requirements.txt
docs/_static/: style.css
docs/_templates/: layout.html
docs/introduction/: index.rst
docs/labaccess/: index.rst
docs/labaccess/reference/: .$pod-layout.drawio.bkp  access-info.csv  component-details.csv  componet-details.csv  devices-info.csv  pod-layout.drawio
docs/reference/: add-desktop-icon.sh  install-docker-desktop.sh  install-docker.sh  install-postman.sh
docs/tasks/: index.rst
docs/tasks/task1/: index.rst  step1.rst  step2.rst  step3.rst  step4.rst  step5.rst  step6.rst
docs/tasks/task1/reference/: docker-compose.yaml  pyats-files.csv  pyats_testbed.yaml
docs/tasks/task2/: index.rst  step1.rst  step2.rst  step4.rst
docs/tasks/task2/reference/: Interfaces.csv  main-fuctions.csv  views.py
docs/tasks/task3/: index.rst  step1.rst  step2.rst  step3.rst  step4.rst
docs/tasks/task4/: index.rst  step1.rst  step2.rst
docs/tasks/task4/images/: ~$run-job-process.svg.bkp
docs/tasks/task5/: index.rst  step1.rst  step2.rst  step3.rst  step4.rst
docs/tasks/task5/reference/: test_case_1.robot  test_case_2.robot
docs/tasks/task6/: index.rst  step1.rst
introduction/: index.html
labaccess/: index.html
ltrato_2001/: task4step1.py  task4step2.py
pyats/: requirements.txt
tasks/: index.html
tasks/task1/: index.html  step1.html  step2.html  step3.html  step4.html  step5.html  step6.html
tasks/task2/: index.html  step1.html  step2.html  step3.html  step4.html  step5.html
tasks/task3/: index.html  step1.html  step2.html  step3.html  step4.html
tasks/task4/: index.html  step1.html  step2.html  step3.html
tasks/task5/: index.html  step1.html  step2.html  step3.html  step4.html
tasks/task6/: index.html  step1.html
