# Copyright 2022-2024, Cisco Systems, Inc.
# All Rights Reserved.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
# OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
# HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
# WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.


[tool.poetry]
name = "ltrato_2001"
version = "2024.06.02"
description = "Cisco Live LTRATO-2001"
authors = ["Jairo Leon", "Luis Rueda"]
readme = "README.md"
license = "LICENSE"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
cisco-gnmi = "*"
genie = "24.3"
jupyterlab = "*"
notebook = "*"
pyats = "24.3"
unicon = "24.3"
virl2-client = "*"


[tool.ruff]
target-version = "py311"


[tool.ruff.lint]
select = [
    "C",
    "E4",
    "E7",
    "E9",
    "F",
    "D103",
    "D102",
    "D101",
    "D200",
    "D213",
    "D202",
    "D400",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
